# animoids-openai

./: .env  .gitignore  Dockerfile  QmTNun11hdjvh15xd8dGR8GePuQM4FDdCBmbvbBG3RLHFT  ai.py  hello.py  lilypad_module.json  lilypad_module.json.tmpl  module.coophive  prompt.yaml  pyproject.toml  requirements.txt
