[tool.poetry]
name = "animoid"
version = "0.1.0"
description = ""
authors = ["aifa <antonis@typesystem.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.1"
requests = "^2.32.2"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
